# summer-research-2025

cellml/archive/: boolean.cellml  relational.cellml  unarrangeable_equations.cellml  unarranged_exponential.cellml
cellml/condensed_capillary/: capillary_network.cellml
cellml/original_capillary/: capillary_network_modules.cellml
cellml/simple_capillary/: simple_capillary.cellml  simple_capillary_ODE.cellml  simple_capillary_causal1.cellml  simple_capillary_causal2.cellml
cellml/test_cases/: addition.cellml  constants.cellml  logarithmic.cellml  unarranged_multiplication.cellml  unarranged_trig.cellml
cellml/testing/: dependency_map.cellml  log_no_base.cellml  simple_rearrangement.cellml  swapped_sides.cellml  test.cellml  variable_on_rhs.cellml
programs/: codegeneration.py  retrievemath.py  simplecellmlprocessing.py  simpleprocessing.py
programs/cpplibcellml/: CMakeLists.txt  build.bat  simpleProcessing.cpp  symtest.cpp  testCopies.cpp
storage/: generatedcondensedcapillaryode.py
testing/tutorial1/: simple_capillary.cellml  tutorial1.cpp  tutorial1_complete.cpp
